update step size, diagnostics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,18 @@
 
 export(compute_conditional_probabilities)
 export(compute_probabilities)
+export(compute_probabilities_Gamma0)
 export(create_Y_matrix)
-export(fit_Gamma_list)
+export(fit_Gamma)
+export(fit_alpha)
 export(fit_alpha_Beta)
-export(get_category_mapping)
+export(fit_alpha_Beta_Gamma)
 export(simulate_Beta)
 export(simulate_X)
 export(simulate_X_list)
 export(simulate_Y)
 export(simulate_Y_list)
+export(simulate_alpha)
 export(simulate_category_mappings)
 importFrom(Rcpp,sourceCpp)
 useDynLib(IBMR, .registration = TRUE)
