--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,11 @@ export(compute_probabilities)
 export(compute_probabilities_Gamma0)
 export(create_Y_matrix)
 export(fit_Gamma)
-export(fit_Gamma_fast)
+export(fit_Gamma_Newton)
 export(fit_alpha)
 export(fit_alpha_Beta)
 export(fit_alpha_Beta_Gamma)
-export(fit_alpha_Beta_Gamma_fast)
+export(fit_alpha_Beta_Gamma_Newton)
 export(simulate_Beta)
 export(simulate_X)
 export(simulate_X_list)
