update diagnostics, add fit_alpha_Gamma

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(fit_alpha)
 export(fit_alpha_Beta)
 export(fit_alpha_Beta_Gamma)
 export(fit_alpha_Beta_Gamma_Newton)
+export(fit_alpha_Gamma)
+export(fit_alpha_Gamma_Newton)
 export(simulate_Beta)
 export(simulate_X)
 export(simulate_X_list)
