--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,6 @@ License: What license is it under?
 Imports: Rcpp (>= 1.0.6)
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
