run devtools document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,7 @@ export(fit_alpha_Beta_Gamma)
 export(fit_alpha_Beta_Gamma_Newton)
 export(fit_alpha_Gamma)
 export(fit_alpha_Gamma_Newton)
-export(fit_elastic_net)
+export(fit_glmnet)
 export(hellinger_distance)
 export(kl_divergence)
 export(predict_categories)
