--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(Beta_SSE)
 export(Beta_TPR)
 export(IBMR)
 export(IBMR_no_Gamma)
+export(check_KKT_IBMR)
+export(check_KKT_IBMR_no_Gamma)
 export(compute_conditional_probabilities)
 export(compute_linear_predictor)
 export(compute_linear_predictor_no_Gamma)
