--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(IBMR)
 export(IBMR_no_Gamma)
 export(check_KKT_IBMR)
 export(check_KKT_IBMR_no_Gamma)
+export(compute_X_list)
 export(compute_conditional_probabilities)
 export(compute_linear_predictor)
 export(compute_linear_predictor_no_Gamma)
@@ -30,6 +31,8 @@ export(hellinger_distance)
 export(kl_divergence)
 export(predict_categories)
 export(simulate_Beta)
+export(simulate_U)
+export(simulate_U_list)
 export(simulate_X_star)
 export(simulate_X_star_list)
 export(simulate_Y)
