lots of updates - usability and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,16 @@ export(compute_X_list)
 export(compute_conditional_probabilities)
 export(compute_linear_predictor)
 export(compute_linear_predictor_no_Gamma)
+export(compute_negative_log_likelihood)
+export(compute_negative_log_likelihood_from_probabilities)
+export(compute_negative_log_likelihood_no_Gamma)
 export(compute_pca_for_Z_list)
 export(compute_probabilities)
 export(compute_probabilities_no_Gamma)
 export(compute_tuning_performance)
 export(compute_tuning_performance_no_Gamma)
 export(create_Y_matrix)
+export(create_fine_category_mappings)
 export(error)
 export(fit_Gamma)
 export(fit_Gamma_Newton)
@@ -26,10 +30,16 @@ export(fit_alpha_Beta_Gamma)
 export(fit_alpha_Beta_Gamma_Newton)
 export(fit_alpha_Gamma)
 export(fit_alpha_Gamma_Newton)
-export(fit_glmnet)
+export(fit_glmnet_relabel)
+export(fit_glmnet_split)
+export(fit_glmnet_subset)
 export(hellinger_distance)
 export(kl_divergence)
 export(predict_categories)
+export(predict_conditional_probabilities)
+export(predict_probabilities)
+export(predict_probabilities_glmnet_split)
+export(predict_probabilities_train)
 export(simulate_Beta)
 export(simulate_U)
 export(simulate_U_list)
