rename glmnet functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,9 +24,9 @@ export(fit_alpha_Beta_Gamma)
 export(fit_alpha_Beta_Gamma_Newton)
 export(fit_alpha_Gamma)
 export(fit_alpha_Gamma_Newton)
-export(fit_glmnet_relabel)
-export(fit_glmnet_split)
-export(fit_glmnet_subset)
+export(glmnet_relabel)
+export(glmnet_split)
+export(glmnet_subset)
 export(hellinger_distance)
 export(kl_divergence)
 export(predict_categories)
