balanced classes for real data based sim, remove 0s from objective vector, warning if no convergence

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(simulate_Y)
 export(simulate_Y_list)
 export(simulate_alpha)
 export(simulate_category_mappings)
+export(simulate_structured_Beta)
 export(which_min)
 importFrom(Rcpp,sourceCpp)
 useDynLib(IBMR, .registration = TRUE)
