--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(Beta_SSE)
 export(Beta_TPR)
 export(IBMR)
 export(IBMR_no_Gamma)
+export(IBMR_no_Gamma_relabel)
+export(IBMR_no_Gamma_subset)
 export(check_KKT_IBMR)
 export(check_KKT_IBMR_no_Gamma)
 export(compute_X_list)
