--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(IBMR)
 export(IBMR_no_Gamma)
 export(IBMR_no_Gamma_relabel)
 export(IBMR_no_Gamma_subset)
+export(balanced_error)
 export(check_KKT_IBMR)
 export(check_KKT_IBMR_no_Gamma)
 export(compute_X_list)
