rename subset and relabel functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(predict_conditional_probabilities)
 export(predict_probabilities)
 export(predict_probabilities_glmnet_split)
 export(predict_probabilities_train)
+export(relabel)
 export(simulate_Beta)
 export(simulate_U)
 export(simulate_U_list)
@@ -47,6 +48,7 @@ export(simulate_Y_list)
 export(simulate_alpha)
 export(simulate_category_mappings)
 export(simulate_structured_Beta)
+export(subset)
 export(which_min)
 importFrom(Rcpp,sourceCpp)
 useDynLib(IBMR, .registration = TRUE)
