export subset_helper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(simulate_alpha)
 export(simulate_category_mappings)
 export(simulate_structured_Beta)
 export(subset)
+export(subset_helper)
 export(which_min)
 importFrom(Rcpp,sourceCpp)
 useDynLib(IBMR, .registration = TRUE)
